--- a/src/xdcheckin/server/templates/player.html
+++ b/src/xdcheckin/server/templates/player.html
@@ -174,6 +174,21 @@
 			return s.replace(/\\u[\dA-Fa-f]{4}/g, (match) => {return String.fromCharCode(parseInt(match.substr(2), 16));});
 		}
 
+		/* Take video screenshot. */
+		async function screenshot(video, quality) {
+			let canvas = document.createElement("canvas");
+			canvas.width = video.videoWidth;
+			canvas.height = video.videoHeight;
+			canvas.getContext("2d").drawImage(video, 0, 0, canvas.width, canvas.height);
+			let img_src = await (new Promise((resolve, reject) => {
+				canvas.toBlob(blob => {
+					resolve(blob);
+				}, "image/jpeg", quality);
+			}));
+			canvas.remove();
+			return img_src;
+		}
+
 		/* Check EULA state. */
 		async function checkEula() {
 			if (localStorage.getItem("xdcheckin_eula"))
