--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -139,7 +139,7 @@
 	<script>
 		checkEula();
 		xdcheckinCheckUpdates();
-		if (localStorage.getItem('username'))
+		if (localStorage.getItem("username"))
 			promptLogin(auto = true);
 		listLocations();
 		listClassrooms();
