--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -43,6 +43,7 @@
 			</div>
 			<div class="div-center">
 				<input id="ids-login-captcha-input" type="range" min="0" max="280" step="1" value="0">
+				&emsp;
 				<button id="ids-login-captcha-button">Verify</button>
 			</div>
 		</div>
