--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -39,7 +39,7 @@
 		<div id="ids-login-captcha-div" style="display: none">
 			<div id="ids-login-captcha-container-div">
 				<img id="ids-login-captcha-img" src="">
-				<div id="ids-login-captcha-line-div"></div>
+				<img id="ids-login-captcha-small-img" src="">
 			</div>
 			<div class="div-center">
 				<input id="ids-login-captcha-input" type="range" min="0" max="280" step="1" value="0">
