fix camera falsely hidden

--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -116,7 +116,7 @@
 		</div>
 		<div id="player3-div"></div>
 
-		<div id="camera-buttons-div" class="div-center">
+		<div id="camera-buttons-div" class="div-center" style="display: none">
 			<B style="font-size:40px; font-family: sans-serif">Camera</B>
 			&emsp;
 			<button onclick="cameraOn()">On</button>
@@ -126,12 +126,12 @@
 				onclickCooldown(this.id);
 			" style="display: none">Scan</button>
 		</div>
-		<div id="camera-div">
+		<div id="camera-div" style="display: none">
 			<video id="camera-video" width="640" height="480" autoplay></video>
 		</div>
 		<div id="camera-scanresult-div" class="scanresult-div"></div>
 
-		<div id="footer-div" class="div-center">
+		<div id="footer-div" class="div-center" style="display: none">
 			<a id="footer-link-a" href="https://github.com/Pairman/Xdcheckin">Xdcheckin</a>
 			&emsp;(C) 2024 Pairman
 		</div>
