server and frontend support for checkin captcha

--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -36,6 +36,17 @@
 					displayTag('activities-list-div');
 			" style="display: none">Activities</button>
 		</div>
+		<div id="activities-checkin-captcha-div" style="display: none">
+			<div id="activities-checkin-captcha-container-div">
+				<img id="activities-checkin-captcha-img" src="">
+				<img id="activities-checkin-captcha-small-img" src="">
+			</div>
+			<div class="div-center">
+				<input id="activities-checkin-captcha-input" type="range" min="0" max="320" step="1" value="0">
+				&emsp;
+				<button id="activities-checkin-captcha-button">Verify</button>
+			</div>
+		</div>
 		<div id="ids-login-captcha-div" style="display: none">
 			<div id="ids-login-captcha-container-div">
 				<img id="ids-login-captcha-img" src="">
@@ -76,6 +87,17 @@
 			" style="display: none">Scan</button>
 		</div>
 		<div id="player0-div"></div>
+		<div id="player0-checkin-captcha-div" style="display: none">
+			<div id="player0-checkin-captcha-container-div">
+				<img id="player0-checkin-captcha-img" src="">
+				<img id="player0-checkin-captcha-small-img" src="">
+			</div>
+			<div class="div-center">
+				<input id="player0-checkin-captcha-input" type="range" min="0" max="320" step="1" value="0">
+				&emsp;
+				<button id="player0-checkin-captcha-button">Verify</button>
+			</div>
+		</div>
 		<div id="player0-scanresult-div" class="scanresult-div"></div>
 
 		<div id="player1-buttons-div" class="div-center" style="display: none">
@@ -120,6 +142,17 @@
 		</div>
 		<div id="camera-div" style="display: none">
 			<video id="camera-video" width="640" height="480" autoplay></video>
+		</div>
+		<div id="camera-checkin-captcha-div" style="display: none">
+			<div id="camera-checkin-captcha-container-div">
+				<img id="camera-checkin-captcha-img" src="">
+				<img id="camera-checkin-captcha-small-img" src="">
+			</div>
+			<div class="div-center">
+				<input id="camera-checkin-captcha-input" type="range" min="0" max="320" step="1" value="0">
+				&emsp;
+				<button id="camera-checkin-captcha-button">Verify</button>
+			</div>
 		</div>
 		<div id="camera-scanresult-div" class="scanresult-div" style="display: none"></div>
 
