--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -37,23 +37,23 @@
 			" style="display: none">Activities</button>
 		</div>
 		<div id="activities-checkin-captcha-div" style="display: none">
-			<div id="activities-checkin-captcha-container-div">
-				<img id="activities-checkin-captcha-img" src="">
-				<img id="activities-checkin-captcha-small-img" src="">
+			<div id="activities-checkin-captcha-container-div" class="captcha-container-div">
+				<img id="activities-checkin-captcha-img" class="captcha-img" src="">
+				<img id="activities-checkin-captcha-small-img" class="captcha-small-img" src="">
 			</div>
 			<div class="div-center">
-				<input id="activities-checkin-captcha-input" type="range" min="0" max="320" step="1" value="0">
+				<input id="activities-checkin-captcha-input" class="captcha-input" type="range" min="0" max="320" step="1" value="0">
 				&emsp;
 				<button id="activities-checkin-captcha-button">Verify</button>
 			</div>
 		</div>
 		<div id="ids-login-captcha-div" style="display: none">
-			<div id="ids-login-captcha-container-div">
-				<img id="ids-login-captcha-img" src="">
-				<img id="ids-login-captcha-small-img" src="">
+			<div id="ids-login-captcha-container-div" class="captcha-container-div">
+				<img id="ids-login-captcha-img" class="captcha-img" src="">
+				<img id="ids-login-captcha-small-img" class="captcha-small-img" src="">
 			</div>
 			<div class="div-center">
-				<input id="ids-login-captcha-input" type="range" min="0" max="280" step="1" value="0">
+				<input id="ids-login-captcha-input" class="captcha-input" type="range" min="0" max="280" step="1" value="0">
 				&emsp;
 				<button id="ids-login-captcha-button">Verify</button>
 			</div>
@@ -88,12 +88,12 @@
 		</div>
 		<div id="player0-div"></div>
 		<div id="player0-checkin-captcha-div" style="display: none">
-			<div id="player0-checkin-captcha-container-div">
-				<img id="player0-checkin-captcha-img" src="">
-				<img id="player0-checkin-captcha-small-img" src="">
+			<div id="player0-checkin-captcha-container-div" class="captcha-container-div">
+				<img id="player0-checkin-captcha-img" class="captcha-img" src="">
+				<img id="player0-checkin-captcha-small-img" class="captcha-small-img" src="">
 			</div>
 			<div class="div-center">
-				<input id="player0-checkin-captcha-input" type="range" min="0" max="320" step="1" value="0">
+				<input id="player0-checkin-captcha-input" class="captcha-input" type="range" min="0" max="320" step="1" value="0">
 				&emsp;
 				<button id="player0-checkin-captcha-button">Verify</button>
 			</div>
@@ -144,12 +144,12 @@
 			<video id="camera-video" width="640" height="480" autoplay></video>
 		</div>
 		<div id="camera-checkin-captcha-div" style="display: none">
-			<div id="camera-checkin-captcha-container-div">
-				<img id="camera-checkin-captcha-img" src="">
-				<img id="camera-checkin-captcha-small-img" src="">
+			<div id="camera-checkin-captcha-container-div" class="captcha-container-div">
+				<img id="camera-checkin-captcha-img" class="captcha-img" src="">
+				<img id="camera-checkin-captcha-small-img" class="captcha-small-img" src="">
 			</div>
 			<div class="div-center">
-				<input id="camera-checkin-captcha-input" type="range" min="0" max="320" step="1" value="0">
+				<input id="camera-checkin-captcha-input" class="captcha-input" type="range" min="0" max="320" step="1" value="0">
 				&emsp;
 				<button id="camera-checkin-captcha-button">Verify</button>
 			</div>
