--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -38,8 +38,8 @@
 		</div>
 		<div id="activities-checkin-captcha-div" style="display: none">
 			<div id="activities-checkin-captcha-container-div" class="captcha-container-div">
-				<img id="activities-checkin-captcha-img" class="captcha-img" alt="activities-checkin-captcha-img" src="">
-				<img id="activities-checkin-captcha-small-img" class="captcha-small-img" alt="activities-checkin-captcha-small-img" src="">
+				<img id="activities-checkin-captcha-img" class="captcha-img" alt="activities-checkin-captcha-img" src=",">
+				<img id="activities-checkin-captcha-small-img" class="captcha-small-img" alt="activities-checkin-captcha-small-img" src=",">
 			</div>
 			<div class="div-center">
 				<input id="activities-checkin-captcha-input" class="captcha-input" type="range" min="0" max="320" step="1" value="0">
@@ -49,8 +49,8 @@
 		</div>
 		<div id="ids-login-captcha-div" style="display: none">
 			<div id="ids-login-captcha-container-div" class="captcha-container-div">
-				<img id="ids-login-captcha-img" class="captcha-img" alt="ids-login-captcha-img" src="">
-				<img id="ids-login-captcha-small-img" class="captcha-small-img" alt="ids-login-captcha-small-img" src="">
+				<img id="ids-login-captcha-img" class="captcha-img" alt="ids-login-captcha-img" src=",">
+				<img id="ids-login-captcha-small-img" class="captcha-small-img" alt="ids-login-captcha-small-img" src=",">
 			</div>
 			<div class="div-center">
 				<input id="ids-login-captcha-input" class="captcha-input" type="range" min="0" max="280" step="1" value="0">
@@ -89,8 +89,8 @@
 		<div id="player0-div"></div>
 		<div id="player0-checkin-captcha-div" style="display: none">
 			<div id="player0-checkin-captcha-container-div" class="captcha-container-div">
-				<img id="player0-checkin-captcha-img" class="captcha-img" alt="player0-checkin-captcha-img" src="">
-				<img id="player0-checkin-captcha-small-img" class="captcha-small-img" alt="player0-checkin-captcha-small-img" src="">
+				<img id="player0-checkin-captcha-img" class="captcha-img" alt="player0-checkin-captcha-img" src=",">
+				<img id="player0-checkin-captcha-small-img" class="captcha-small-img" alt="player0-checkin-captcha-small-img" src=",">
 			</div>
 			<div class="div-center">
 				<input id="player0-checkin-captcha-input" class="captcha-input" type="range" min="0" max="320" step="1" value="0">
@@ -145,8 +145,8 @@
 		</div>
 		<div id="camera-checkin-captcha-div" style="display: none">
 			<div id="camera-checkin-captcha-container-div" class="captcha-container-div">
-				<img id="camera-checkin-captcha-img" class="captcha-img" alt="camera-checkin-captcha-img" src="">
-				<img id="camera-checkin-captcha-small-img" class="captcha-small-img" alt="camera-checkin-captcha-small-img" src="">
+				<img id="camera-checkin-captcha-img" class="captcha-img" alt="camera-checkin-captcha-img" src=",">
+				<img id="camera-checkin-captcha-small-img" class="captcha-small-img" alt="camera-checkin-captcha-small-img" src=",">
 			</div>
 			<div class="div-center">
 				<input id="camera-checkin-captcha-input" class="captcha-input" type="range" min="0" max="320" step="1" value="0">
