--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -3,7 +3,7 @@
 	<title>Xdcheckin</title>
 
 	<meta charset="UTF-8">
-	<meta name="viewport" content="initial-scale=0.7, user-scalable=no">
+	<meta name="viewport" content="initial-scale=0.7">
 	<link rel="shortcut icon" href="#">
 	<link rel="stylesheet" href="static/style.css">
 	<link rel="stylesheet" href="https://g.alicdn.com/apsara-media-box/imp-web-player/2.20.2/skins/default/aliplayer-min.css">
