--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -12,7 +12,7 @@
 	<script src="static/g_classroom_urls.js"></script>
 	<script src="static/g_locations.js"></script>
 	<script src="static/global.js"></script>
-	<script src="static/util.js"></script>
+	<script src="static/util.js" onload="qrcode_scanner_init()"></script>
 	<script src="static/misc.js"></script>
 	<script src="static/login.js"></script>
 	<script src="static/activity.js"></script>
@@ -164,7 +164,6 @@
 
 		<script>
 			checkEula();
-			qrcode_scanner_init();
 			xdcheckinCheckUpdates();
 			if (localStorage.getItem("username"))
 				promptLogin(auto = true);
