--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://g.alicdn.com/apsara-media-box/imp-web-player/2.21.0/skins/default/aliplayer-min.css">
 	<script src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.21.0/aliplayer-h5-min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@undecaf/zbar-wasm@0.11.0/dist/index.js"></script>
+	<script src="static/polyfill.js"></script>
 	<script src="static/g_classroom_urls.js"></script>
 	<script src="static/g_locations.js"></script>
 	<script src="static/global.js"></script>
