--- a/src/xdcheckin/server/templates/index.html
+++ b/src/xdcheckin/server/templates/index.html
@@ -9,10 +9,10 @@
 	<link rel="stylesheet" href="https://g.alicdn.com/apsara-media-box/imp-web-player/2.21.0/skins/default/aliplayer-min.css">
 	<script src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.21.0/aliplayer-h5-min.js"></script>
 	<script src="static/polyfill.js"></script>
-	<script src="static/g_classroom_urls.js"></script>
-	<script src="static/g_locations.js"></script>
 	<script src="static/global.js"></script>
-	<script src="static/util.js"></script>
+	<script src="static/g_locations.js"></script>
+	<script src="static/g_classroom_urls.js"></script>
+	<script src="static/util.js" onload="globalThis.g_is_ios = isPlatformIOS()"></script>
 	<script src="static/login.js"></script>
 	<script src="static/activity.js"></script>
 	<script src="static/location.js"></script>
